--- a/profile.html
+++ b/profile.html
@@ -1,56 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-  
-    <link rel="stylesheet" href="main.css">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>myprofile</title>
-    <img src="hz.logo.jpg" alt=" HZ logo"
-    width="300" 
-    height="100">
-  </head>
-  <body>
-    <p> Click <a href="index.html"> here </a> to go back to home. </p>
-    <h1>About Me</h1>
-    <P> Hello my name is Quinn, I am currently 19 years old and I live in The Netherlands.</P>
-    <p> I am a habitant of the city called 'Goes', and I live there with my father, mother and my little brother. I also have an older sister, but she lives by herself. </p>
-    <p> I am currently studying IT at the 'Hogeschool Zeeland'. We are now one week into the course </p>
-    <p> and what i can tell you about the study is that it is very difficult but, fun and challenging to do. </p>
-    <br> 
-    <p> I have a lot of hobbies that I like to do. Some of them I can only do in the summer, like skateboarding for example. </p>
-    <p> Some other hobbies I like to do are: listen to, making and playing music, skateboarding, drawing, gymnastics and gaming. </p>
-    <p> I did gymnastics for about 12 years now, but I recently stopped because I didnt have fun anymore. </p>
-    <p> In my whole lifetime I won a lot of tournaments, I even became 5 time national champion in a row. </p>
-    <p> Another big hobby of mine is music, from when I was little I was always busy with music. When I was 10 I started </p>
-    <p> my first guitar lessons. It was fun for a while, but I mostly play the piano now. If you have any other questions about me </p>
-    <p> feel free to e-mail me at <a href="mailto:munc0017@hz.nl"> <b> munc0017@hz.nl </b> </a> </p>
-    <br>
 
-    <table>
-      <tr>
-        <th>summary</th>
-        <th>contact info</th>
-      </tr>
-      <tr>
-        <td>
-          <ul>
-            <li>Quinn</li>
-            <li>19 years old</li>
-            <li>Goes</li>
-            <li>Hogeshchool Zeeland</li>
-            <li>music and gaming</li></div>
-          <ul>
-        </td>
-        <td>
-          <ul>
-            <li><a href="mailto:munc0017@hz.nl">E-mail</a></li>
-            <li><a href="https://www.instagram.com/quinnemans052019/">instagram</a></li>
-            <li> Snapchat: quinnemans14</li>
-            <li><a href="https://github.com/quinnemans/quinnemans.github.io"> My github page </a> </li> </ul>
-        </td>
-      </tr>
-    </table>
-  </body>
+
+                            <!-- Connection to css and document name -->
+<head>
+  <link rel="stylesheet" href="main.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>myprofile</title>
+</head>
+
+
+                <!-- This is the code for the dropdown menu to go to different pages. -->
+<body>
+    
+    <div class="navbar">
+      <div class="dropdown">
+        <button class="dropbtn">pages: 
+          <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content">
+          <a href="index.html">Home</a>
+          <a href="profile.html">About Me</a>
+          <a href="faq.html">FAQ</a>
+          <a href="blog.html">Blog</a>
+          <a href="dashboard.html">Dashboard</a>
+        </div>
+      </div> 
+    </div>
+    <img  class="hzlogoboven" src="hzlogo.png" alt=" HZ logo"
+    width="130" 
+    height="auto">
+
+                      <!-- Text about myselve, my familie and my hobbies. -->
+  <h1>About Me</h1>
+   <p> Hello my name is Quinn, I am currently 19 years old and I live in The Netherlands.<br>
+   I am a habitant of the city called 'Goes', and I live there with my father, mother and my little brother. I also
+    have an older sister, but she lives by herself. <br>
+  I am currently studying IT at the 'Hogeschool Zeeland'. We are now one week into the course <br>
+   and what i can tell you about the study is that it is very difficult but, fun and challenging to do.</p>
+  <br>
+  <p>I have a lot of hobbies that I like to do. Some of them I can only do in the summer, like skateboarding for
+    example. <br>
+   Some other hobbies I like to do are: listen to, making and playing music, skateboarding, drawing, gymnastics and
+    gaming. <br>
+    I did gymnastics for about 12 years now, but I recently stopped because I didnt have fun anymore. <br>
+  In my whole lifetime I won a lot of tournaments, I even became 5 time national champion in a row. <br>
+  Another big hobby of mine is music, from when I was little I was always busy with music. When I was 10 I started
+  <br>
+   my first guitar lessons. It was fun for a while, but I mostly play the piano now. If you have any other questions
+    about me <br>
+   feel free to e-mail me at <a href="mailto:munc0017@hz.nl"> <b> munc0017@hz.nl </b> </a> </p> <br>
+  <br>
+
+  <table>
+    <tr>
+      <th>summary</th>
+      <th>contact info</th>
+    </tr>
+
+    <tr>
+
+      <td>
+        <ul>
+          <li>Quinn</li>
+          <li>19 years old</li>
+          <li>Goes</li>
+          <li>Hogeshchool Zeeland</li>
+          <li>music and gaming</li>
+        </ul>
+      </td>
+
+                             <!-- This is the code for my socials. -->
+      <td>
+        <ul>
+          <li><a href="mailto:munc0017@hz.nl">E-mail</a></li>
+          <li><a href="https://www.instagram.com/quinnemans052019/">instagram</a></li>
+          <li> Snapchat: quinnemans14</li>
+          <li><a href="https://github.com/quinnemans/quinnemans.github.io"> My github page </a> </li>
+        </ul>
+      </td>
+    </tr>
+  </table>
+<br>
+<br>
+<br>
+<br>
+<br>
+  <img class="pfp" src="pfp.jpg" alt="profile picture"
+  width="100"
+  height="100">
+  <p>Creator: Quinn de Munck</p>
+</body>
+
 </html>
