--- a/index.html
+++ b/index.html
@@ -1,42 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+
+
+                                    <!-- Connection to css and document name. -->
 <head>
-    <link rel="stylesheet" href="main.css">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>index</title>
+  <link rel="stylesheet" href="main.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>index</title>
 </head>
+
+
+                       <!-- This is the code for the dropdown menu to go to different pages. -->
 <body>
-  <img src="hz.logo.jpg" alt=" HZ logo"
-  width="300" 
-  height="100">
-    <p> Click <a href="profile.html"> here </a> for my profile.</p>
-    <h1> The HZ</h1>
-     <P> The 'Hogeschool Zeeland' also known as the HZ is a school with many different courses, </P>
-     <p> from computer IT to construction, there is a direction for everything you can think about. </p>
-     <p> At the HZ there are about 5000 students from all over the world and therefore mainly English is spoken. </p>
-     <p> Even in the international IT class this year there are already students over more than 20 different countries</P>
-     <br>
-     <p> The course I chose is also the IT education, but instead of the international class I chose the Dutch class.</P>
-     <p> I chose this class because i think the education itself is tough enough. Not that I am not good at English,</P>
-     <p> on the contrary I am quite good at it but I think I would not understand everything if it was all in English.</P>
-     <p> I chose for this education because I have always been interested in computers, I love nothing more than putting computers together and apart</P>
-     <p> and everything that resembles that. I also think that with this education you can go to many different directions since the world is becoming more and more modern.</P>
-     <p> <b> If you want any extra information about the HZ feel free to visit there page </b> <a href="https://hz.nl/">hz.nl</a></p>   
-    
-     <h3> Languages on the HZ: </h3>
-      <ul>
-        <li>Dutch</li>
-        <li>Engelisch</li>
-        <li>German</li>
-        <li>Polish</li>
-        <li>Ukranïen</li>
-        <li>Japanese</li>
-        <li>Chinese</li>
-        <li>Korean</li>
-        <li>Spanish</li>
-        <li>Portuguese</li>
-      </ul>
-      <p> There are a lot of other languages but it is to much to write them all down. </p>
-</body>
+      
+      <div class="navbar">
+        <div class="dropdown">
+          <button class="dropbtn">pages: 
+            <i class="fa fa-caret-down"></i>
+          </button>
+          <div class="dropdown-content">
+            <a href="index.html">Home</a>
+            <a href="profile.html">About Me</a>
+            <a href="faq.html">FAQ</a>
+            <a href="blog.html">Blog</a>
+            <a href="dashboard.html">Dashboard</a>
+          </div>
+        </div> 
+      </div>
+      <img src="hz.logo.jpg" alt=" HZ logo" class="homefoto"
+      width="100%" >
+      <img class="hzlogoboven" src="hzlogo.png" alt="HZ logo"
+      width="130" 
+      height="auto">
+                          <!-- Text about the HZ and why i chose for this education. -->
+<h1> Home </h1>
+  <table>
+    <tr>
+      <th><p> The 'Hogeschool Zeeland' also known as the HZ is a school with many different courses,
+        from computer IT to construction, there is a direction for everything you can think about.
+        At the HZ there are about 5000 students from all over the world and therefore mainly English is spoken. 
+         Even in the international IT class this year there are already students over more than 20 different countries. </p></th>
+
+      <th><p>The course I chose is also the IT education, but instead of the international class I chose the Dutch class.
+        I chose this class because i think the education itself is tough enough. Not that I am not good at English,
+        on the contrary I am quite good at it but I think I would not understand everything if it was all in English.
+        I chose for this education because I have always been interested in computers, I love nothing more than putting
+         computers together and apart
+        and everything that resembles that. I also think that with this education you can go to many different
+         directions since the world is becoming more and more modern.
+        <b> If you want any extra information about the HZ feel free to visit there page </b> <a
+           href="https://hz.nl/">hz.nl</a><br> </p></th>
+    </tr>
+  </table>
+
+    <h3> Languages on the HZ: </h3>
+    <ul>
+      <li>Dutch</li>
+      <li>Engelisch</li>
+      <li>German</li>
+      <li>Polish</li>
+      <li>Ukranïen</li>
+      <li>Japanese</li>
+      <li>Chinese</li>
+      <li>Korean</li>
+      <li>Spanish</li>
+      <li>Portuguese</li>
+    </ul>
+
+
+    <p> There are a lot of other languages but it is too much to write them all down. </p>
+
+
+  </body>
+
 </html>
