--- a/profile.html
+++ b/profile.html
@@ -3,32 +3,41 @@
 
 
                             <!-- Connection to css and document name -->
-<head>
-  <link rel="stylesheet" href="main.css">
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>myprofile</title>
-</head>
+                            <head>
 
-
-                <!-- This is the code for the dropdown menu to go to different pages. -->
-<body>
-    
-    <div class="navbar">
-      <div class="dropdown">
-        <button class="dropbtn">pages: 
-          <i class="fa fa-caret-down"></i>
-        </button>
-        <div class="dropdown-content">
-          <a href="index.html">Home</a>
-          <a href="profile.html">About Me</a>
-          <a href="faq.html">FAQ</a>
-          <a href="blog.html">Blog</a>
-          <a href="dashboard.html">Dashboard</a>
-        </div>
-      </div> 
-    </div>
+                              <meta charset="UTF-8">
+                              <meta name="viewport" content="width=device-width, initial-scale=1.0">
+                              <title>Welcome</title>
+                              <link rel="stylesheet" href="main.css">
+                          </head>
+                          <body>
+                              <div class="navbar">
+                                  <div class="dropdown">
+                                    <button class="dropbtn">Pages: 
+                                      <i class="fa fa-caret-down"></i>
+                                    </button>
+                                    <div class="dropdown-content">
+                                      <a href="index.html">Home</a>
+                                      <a href="profile.html">About Me</a>
+                                      <a href="faq.html">FAQ</a>
+                                      <a href="blog.html">Blog</a>
+                                      <a href="dashboard.html">Dashboard</a>
+                                    </div>
+                                  </div> 
+                          
+                                  <div class="dropdown">
+                                    <button class="dropbtnusefulltools">Useful Tools:
+                                      <i class="fa fa-caret-down"></i>
+                                    </button>
+                                    <div class="dropdown-usefulltools">
+                                      <a href="https://oer.hz.nl/6978cdea-fb31-430b-9bf9-63206aa07754">Course and Examination Regulations</a>
+                                      <a href="https://hz.nl/uploads/documents/1.4-Over-de-HZ/1.4.3.-Regelingen-en-documenten/OERS/2023-2024/Juli/TWE/IR-B-HBO-ICT-full-time-2023-2024-DEF.pdf">Implementation Regulations</a>
+                                      <a href="https://glaze-donut-5a5.notion.site/Assignment-Specification-661c5ac5d7494328a58be61d00dd41e4#e1305df5024f4fa2bab3720976a030f3">Notion</a>
+                                      <a href="https://hz.osiris-student.nl/voortgang">MyHZ study progress</a>
+                                      <a href="https://github.com/HZ-HBO-ICT">GitHub environment of the study program</a>
+                                    </div>
+                                  </div> 
+                                </div>
     <img  class="hzlogoboven" src="hzlogo.png" alt=" HZ logo"
     width="130" 
     height="auto">
