--- a/studychoice.html
+++ b/studychoice.html
@@ -1,21 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="stylesheet" href="main.css">
+  <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>study choice</title>
+    <title>Welcome</title>
+    <link rel="stylesheet" href="main.css">
 </head>
-
 <body>
-    <img  class="hzlogoboven" src="hzlogo.png" alt=" HZ logo"
-    width="130" 
-    height="auto"> 
-  
-      <div class="navbar">
+    <div class="navbar">
         <div class="dropdown">
-          <button class="dropbtn">pages: 
+          <button class="dropbtn">Pages: 
             <i class="fa fa-caret-down"></i>
           </button>
           <div class="dropdown-content">
@@ -26,12 +21,54 @@
             <a href="dashboard.html">Dashboard</a>
           </div>
         </div> 
-      </div>    
-    <h1> Study Choice </h1>
+
+        <div class="dropdown">
+          <button class="dropbtnusefulltools">Useful Tools:
+            <i class="fa fa-caret-down"></i>
+          </button>
+          <div class="dropdown-usefulltools">
+            <a href="https://oer.hz.nl/6978cdea-fb31-430b-9bf9-63206aa07754">Course and Examination Regulations</a>
+            <a href="https://hz.nl/uploads/documents/1.4-Over-de-HZ/1.4.3.-Regelingen-en-documenten/OERS/2023-2024/Juli/TWE/IR-B-HBO-ICT-full-time-2023-2024-DEF.pdf">Implementation Regulations</a>
+            <a href="https://glaze-donut-5a5.notion.site/Assignment-Specification-661c5ac5d7494328a58be61d00dd41e4#e1305df5024f4fa2bab3720976a030f3">Notion</a>
+            <a href="https://hz.osiris-student.nl/voortgang">MyHZ study progress</a>
+            <a href="https://github.com/HZ-HBO-ICT">GitHub environment of the study program</a>
+          </div>
+        </div> 
+      </div>
+    <h1 class="swottext">Study Choice </h1>
     <table style="width:13%">
         <tr>
             <th class="ict"><a href="blog.html">go back to Blog Feed </a></th>
         </tr>
       </table>  
+<table>
+    <tr>
+      <th class="faq"> <h2> Why I’m Choosing ICT Education </h2> 
+        My Passion for Technology and Computers In today’s world, technology is everywhere, and choosing to study Information and Communication Technology (ICT) feels like the right path for me. <br>
+        I’m excited about this choice because I love modern technology, I’m really curious about computers, and I enjoy learning new things. <br>
+        Here’s why ICT is the perfect fit for me. 
+
+        <h2> A Love for Modern Technology </h2> 
+        ince I was young, I’ve been amazed by how quickly technology changes. <br>
+        Whether it’s the newest smartphones or the latest apps, I’m fascinated by how technology keeps improving. <br>
+        It’s not just about cool gadgets but also about the amazing new ideas that help us move forward. <br>
+        Being involved in this ever-changing field is really exciting for me.
+        
+        <h2> A Strong Curiosity About Computers </h2>
+        I’ve always wondered, “How do computers work?” From taking apart old devices to trying out different software, <br>
+        I’ve been intrigued by what goes on inside a computer. <br>
+        Learning how computers process information and perform tasks is something I want to dive deeper into. <br>
+        Studying ICT will give me the chance to explore these interests more thoroughly, from programming to networking.
+        
+       <h2> Conclusion </h2>
+         Choosing to study ICT is more than just a career choice for me; it reflects my excitement for modern technologyand my curiosity about how computers. <br>
+         It’s a field that fits my interests and offers opportunities to make a real impact in the tech world. <br>
+         I’m looking forward to the challenges and opportunities ahead, knowing that my enthusiasm and dedication will guide me through this journey.
+        <br>
+        Thank you for reading about why I’m excited to pursue ICT education. 
+        I can’t wait to share more about my experiences and discoveries as I explore this fascinating field 
+        </th>
+    </tr>
+</table>
 </body>
 </html>
